@@ -57,6 +57,7 @@ export(dba,
        DBA_DESEQ2,
        DBA_DESEQ2_BLOCK,
        DBA_ALL_METHODS,
+       DBA_ALL_BLOCK,
        DBA_DATA_FRAME,
        DBA_DATA_RANGEDDATA,
        DBA_DATA_GRANGES,
