@@ -66,6 +66,7 @@ DBA_DESEQ2_BLOCK  = 'DESeq2Block'
 DBA_DESEQ         = DBA_DESEQ_GLM
 
 DBA_ALL_METHODS = c(DBA_EDGER,DBA_DESEQ,DBA_DESEQ2)
+DBA_ALL_BLOCK   = c(DBA_EDGER_BLOCK,DBA_DESEQ_BLOCK,DBA_DESEQ2_BLOCK)
 
 DBA_DATA_FRAME                    = 0
 DBA_DATA_RANGEDDATA               = 1
